--- a/src/components/preview.css
+++ b/src/components/preview.css
@@ -9,6 +9,13 @@
     width: 100%;
 }
 
+.preview-err {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    color: red;
+}
+
 .react-draggable-transparent-selection .preview-wrapper:after {
     content: '';
     position: absolute;
